joystick (1:1.6.0-2) UNRELEASED; urgency=medium

  * Rely on udevadm being on the PATH. Closes: #852579.

 -- Stephen Kitt <skitt@debian.org>  Tue, 20 Jun 2017 20:59:39 +0200

joystick (1:1.6.0-1) unstable; urgency=medium

  * New upstream release.
  * Update Denilson Figueiredo de Sá's blacklist; this fixes issues with
    Microsoft keyboards. Closes: #825686.

 -- Stephen Kitt <skitt@debian.org>  Sat, 08 Oct 2016 13:19:25 +0200

joystick (1:1.5.1-2) unstable; urgency=medium

  * Actually install evdev-joystick...

 -- Stephen Kitt <skitt@debian.org>  Tue, 19 Apr 2016 23:47:43 +0200

joystick (1:1.5.1-1) unstable; urgency=medium

  * New upstream release, adding evdev-joystick (from stella).
  * Switch to https: VCS URIs (see #810378).
  * Enable all hardening options.
  * Clean up debian/control using cme.
  * Standards-Version 3.9.8, no change required.

 -- Stephen Kitt <skitt@debian.org>  Tue, 19 Apr 2016 23:34:21 +0200

joystick (1:1.4.9-1) unstable; urgency=medium

  * New upstream release.
  * Install Denilson Figueiredo de Sá's blacklist. Closes: #714399.
  * Assume /usr is mounted before the udev rules are invoked, which allows
    the udev helper scripts to be removed and thus
    /lib/udev/hotplug.functions to no longer be required.
    Closes: #810115.
  * Drop joystick preinst and postinst, they were only needed for
    upgrades to Squeeze.
  * Drop the workaround for Acrux gamepads, they've been supported by
    the kernel since 2.6.39.
  * Rename inputattach.sleep.d 40inputattach so it can be installed via
    inputattach.install.
  * Clean up the .install and .manpages catalogs.
  * Build with systemd support.

 -- Stephen Kitt <skitt@debian.org>  Sat, 09 Jan 2016 17:21:52 +0100

joystick (1:1.4.8-2) unstable; urgency=medium

  * Add pm-utils script to re-start inputattach after waking from
    suspend. Closes: #799729. Thanks to John Morris for the fix!
  * Rewrite debian/copyright in DEP5 format.
  * Standards-Version 3.9.6, no change required.
