@@ -1,6 +1,8 @@
 joystick (1:1.6.0-2) UNRELEASED; urgency=medium
 
   * Rely on udevadm being on the PATH. Closes: #852579.
+  * Update Denilson Figueiredo de Sá's blacklist, using the version for
+    kernel 4.9 or later.
 
  -- Stephen Kitt <skitt@debian.org>  Tue, 20 Jun 2017 20:59:39 +0200
 
